# modbus-connect

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  README.md  pre-commit.sh  pruebas.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build-release-publish.yml  ci.yml  continuous-integration.yml  lint-test.yml  lint.yml  publish.yml  safety.yml  tests.yml
.pre-commit/: check-lint.sh  check-tests.sh
modbus_connect/: client.py  connect.py  core.py  importer.py  processors.py  tags.py
src/modbus_gateway/: core.py  importer.py  processors.py  utils.py
src/tests/modbus_connect/: test_e2e.py  test_gateway.py  test_processors.py
src/tests/modbus_gateway/: test_e2e.py  test_gateway.py  test_integration_external.py  test_processors.py  test_utils.py
tests/: conftest.py  mock_modbus.py  test_client.py  test_connect.py  test_e2e.py  test_integration.py  test_processors.py  test_tags.py  test_utils.py
