[tool.poetry]
name = "modbus-connect"
version = "0.1.2"
description = "Modbus TCP data acquisition library"
authors = ["Ángel Fernández Sobrino <fernandezsobrinoangel@gmail.com>"]
readme = "README.md"
packages = [{ include = "modbus_connect" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
pymodbus = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
black = { version = "^23.1a1", allow-prereleases = true }
pre-commit = "^2.21.0"
genbadge = { extras = ["all"], version = "^1.1.0" }
poethepoet = "^0.18.1"


[tool.poetry.group.build.dependencies]
safety = "^2.3.5"

[tool.poe.tasks]
tests = "poetry run pytest"
tests-cov = "poetry run pytest --cov=modbus_connect --cov-report=term"
lint = "poetry run black ./modbus_connect/* ./tests/*"

[tool.black]
line-length = 79
include = '/.pyi?$'
exclude = '''
/(
    .git
  | .mypy_cache
  | .pytest_cache
  | .venv
  | .dist
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
